atlassian/confluence/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: confluence
spec:
  type: NodePort
  selector:
    app: confluence
  ports:
    - name: http
      port: 8090
      targetPort: 8090
    - name: synchrony
      port: 8091
      targetPort: 8091
